# multivariate-anomaly-detection

./: .gitignore  Dockerfile  LICENSE  README.md  STRIIM.md  STRIIM_TRANAD.md  TECHNICAL.md  docker-compose.demo.yml  docker-compose.rest.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  base_detector.py  main.py  pyproject.toml  schemas.py  tranad_model.py  tranad_registry.py  tranad_scorer.py  tranad_streaming_detector.py
code/: 0_verify_setup.py  1_data_exploration.ipynb  1_train_model.py  2_evaluate_model.py  2_model_design.ipynb  3_streaming_app.py  3_train_model.py  4_evaluate_model.py  4_grid_sweep.py  5_streaming_app.py  6_optimize.py
configs/: default.yaml
models/tranad/: summary.json
models/tranad/machine-1-1/: attribution_results.json  eval_results.json  model.ckpt  scorer_state.json
models/tranad/machine-2-1/: attribution_results.json  eval_results.json  model.ckpt  scorer_state.json
models/tranad/machine-3-2/: attribution_results.json  eval_results.json  model.ckpt  scorer_state.json
models/tranad/machine-3-7/: attribution_results.json  eval_results.json  model.ckpt  scorer_state.json
notebooks/: data_exploration.ipynb  model_design.ipynb
producer/: Dockerfile  producer.py  pyproject.toml
samples/: score_request.json  score_request_machine-2-1.json  score_request_machine-3-2.json
scripts/: demo_live.py  download_smd.py  evaluate_smd.py  generate_demo_data.py  plot_attribution.py  preprocess_smd.py  show_results.py  sweep_smd.py  train_all_machines.py  train_smd.py
src/: model.py  preprocess.py  registry.py  schemas.py  scorer.py  spot.py  train.py  utils.py
striim/: TRANAD.tql
striim/tranad-scorer/: build.sh  pom.xml
striim/tranad-scorer/src/main/java/com/striim/tranad/: TranADScorer.java
