[project]
name = "multivariate-anomaly-detection"
version = "0.1.0"
description = "TranAD multivariate time series anomaly detection with Kafka/Spark streaming"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[tool.uv.workspace]
members = ["app", "producer"]
