[project]
name = "tranad-anomaly-detection-app"
version = "0.1.0"
description = "TranAD real-time anomaly detection with FastAPI, Kafka/Spark streaming"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "pyspark==3.5.3",
    "confluent-kafka>=2.3.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
]
